--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -26,7 +26,7 @@
    <string>Sudoku Solver</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="button_solve">
     <property name="geometry">
      <rect>
       <x>430</x>
